--- a/template.tex
+++ b/template.tex
@@ -77,9 +77,9 @@
 % Header i-> inner (bei einseitig links), c -> center, o -> Outer (bei einseitg rechts)
 \ihead{BuK WS 2020/21 \\ Tutorium 99 \\\today}
 \chead{\Large Übungsblatt 1}
-\ohead{Erster Name, 123456 \\
-	   Zweiter Name, 654321 \\
-	   Dritter Name, 162534}
+\ohead{Til Mohr, 405959 \\
+	   Andrés Montoya, 405409 \\
+	   Marc Ludevid Wulf, 405401}
 	
 \cfoot*{\pagemark} % Seitenzahlen unten
 
