--- a/Übung 01/template.tex
+++ b/Übung 01/template.tex
@@ -84,73 +84,60 @@
 \cfoot*{\pagemark} % Seitenzahlen unten
 
 \begin{document}
-	
-
-	
-	% Hier geht die eigentliche Lösung der Aufgaben los
-	
 	\section*{Aufgabe 1}
-	
-	Das \LaTeX{}-Kompendium auf Wikibooks\footnote{\url{https://de.wikibooks.org/wiki/LaTeX-Kompendium}} ist eine gute Einführung.
-	Für die Zusammenarbeit bietet sich das RWTH Gitlab an\footnote{\url{https://git.rwth-aachen.de}}.
+	\begin{enumerate}[label=\alph*)]
+		\item 
+		\item 
+	\end{enumerate}
 	
 	
 	\section*{Aufgabe 2}
+	$q_0 110 \vdash 1 q_0 10 \vdash 11 q_0 0 \vdash 110 q_0 \vdash 11 q_1 0 \vdash 110 \bar{q}$
 	
-	Als \LaTeX{}-Editor bzw. -IDE ist TeXStudio \footnote{\url{https://www.texstudio.org/}} ein guter Kandidat.
-	
-
 	
 	\section*{Aufgabe 3}
-	
-		Für Teilaufgaben kann man Aufzählungen verwenden:
+	Turingmaschine $M= (\{q_0 , q_1 , q_2 , \bar{q}\}, \{0,1\}, \{0,1,B\}, B, q_0, \bar{q}, \delta)$ mit Verhalten:\\
+	\begin{tabular}{c | c c c}
+	$\delta$ & 0 & 1 & B \\
+	\hline
+	$q_0$ & ($q_0$, 0, R) & ($q_1$, 1, R) & ($q_0$, B, L) \\
+	$q_1$ & ($q_2$, 0, L) & ($q_1$, 1, L) & ($\bar{q}$, B, N) \\
+	$q_2$ & ($\bar{q}$, 1, N) & ($q_1$, 0, L) & ($q_0$, 1, L) \\
+	\end{tabular}
+	\subsection*{Funktionsweise}
 	\begin{itemize}
-		\item als Aufzählung
-		\item ohne Nummerierung,
+	\item Wurde $\epsilon$ als Eingabe gegeben. macht die Turingmaschine nichts am Band
+	\item Wurde nicht $\epsilon$ als Eingabe übergeben, so geht die Folgt die Turingmaschine diesen Schritten:
+		\begin{enumerate}[label=\arabic*.)]
+		\item Gehe bis an das Ende der Eingabe (also bis B)
+		\item Gehe 2 Stellen nach links
+		\item Falls 0 unter dem Lesekopf, dann ändere es zu 1 und terminiere. Sonst schreibe 0, gehe nach links und wiederhole den Schritt.
+		\end{enumerate}
 	\end{itemize}
-	oder auch
-	\begin{enumerate}
-		\item mit
-		\item Nummerierung.
-	\end{enumerate}
+	
 	
 	\section*{Aufgabe 4}
+	\begin{enumerate}[label=\alph*)]
+		\item 
+		\item 
+	\end{enumerate}
 	
-	Kleine Diagramme lassen sich ebenfalls erstellen, zum Beispiel:
 	
-	\begin{center}
-		\begin{tikzpicture}
-		\node (1) {$v_1$};
-		\node [right of=1] (2) {$v_2$};
-		\node [below of=2] (3) {$v_3$};
-		\draw (1) -- (2);
-		\draw (1) -- (3);
-		\end{tikzpicture}
-	\end{center}
+	\section*{Aufgabe 5}
+	Die Turingmaschine M gibt akzeptiert nur die Wörter der Sprache $L = 0(0+1)^* 1 + 1(0+1)^* 0$
+	\subsection*{Funktionsweise}
+	\begin{itemize}
+	\item Wurde $\epsilon$ als Eingabe übergeben, so wird dieses Wort sofort rejected ($=(\bar{q},0,N)$).
+	\item Abhängig von dem zuerst gelesenen Zeichen versetzt sich die Turingmaschine in zwei unterschiedliche, aber ähnliche Zweige:
+		\begin{itemize}
+		\item Wird 0 zuerst gelesen, durchläuft die Turingmaschine die komplette Eingabe. Bei dem ersten B angekommen, geht diese wieder 1 Schritt nach links und nimmt dann nur Wörter an, die auf 1 enden.
+		\item Wird 1 zuerst gelesen, durchläuft die Turingmaschine die komplette Eingabe. Bei dem ersten B angekommen, geht diese wieder 1 Schritt nach links und nimmt dann nur Wörter an, die auf 0 enden.
+		\end{itemize}
+	\end{itemize}
 	
-	oder auch etwas komplizierter:
+	\section*{Aufgabe 6}
 	
-	\begin{center}
-		% Stil festlegen, der dann für alle Knoten verwendet wird
-		\tikzset{dot/.style={circle, draw=black, fill=black, inner sep=0pt, minimum size=5pt}}
-		% Das eigentlich Diagramm
-		\begin{tikzpicture}[node distance=1.5cm]
-		\node [dot,label={left:$v$}] (1) {};
-		\node [dot,right of=1] (2) {};
-		\node [dot,below of=2,label={right:$w$}] (3) {};
-		\node [dot,below of=1] (4) {};
-		\path [draw=black, ->, >=stealth', shorten <=2pt, shorten >=2pt] % Optionen nur für das Aussehen
-		(1) edge (3)
-		(1) edge (4)
-		(2) edge (3)
-		(4) edge [loop left] ()
-		(1) edge node [above] {$e$} (2);
-		\end{tikzpicture}
-	\end{center}
-	
-	Alternativ können auch externe Dateien eingebunden werden (z.B.\ Bildformate, PDF).
-	% Dazu ganz oben das Paket graphicx einbinden: \usepackage{graphicx}
-	% und an der entsprechenden Stelle dann die Grafik laden: \includegraphics{datei}
-	
+		
+		
 \end{document}
 
