--- a/Übung 06/Blatt-06_Tutorium-04_Gruppe-151.tex
+++ b/Übung 06/Blatt-06_Tutorium-04_Gruppe-151.tex
@@ -146,11 +146,11 @@
 			i = 1
 			I = $\langle \rangle$
 			while(i < m)
-				if($k_i$ oben und unten verschieden lang)
-					I += index($k_i$)
+				if($k_{o_i}$ oben und unten verschieden lang)
+					I += index($k_{o_i}$)
 				else
-					I += index($x_i$)
-					I += index($y_i$)
+					I += index($x_{o_i}$)
+					I += index($y_{o_i}$)
 				i++
 			return I
 			\end{lstlisting}
